--- a/R2BEAT_workflows.ipynb
+++ b/R2BEAT_workflows.ipynb
@@ -37,7 +37,7 @@
     "# Install last version of R2BEAT and ReGenesees\n",
     "#install.packages(\"devtools\")\n",
     "#devtools::install_github(\"DiegoZardetto/ReGenesees\",dependencies = FALSE)\n",
-    "#devtools::install_github(\"barcaroli/R2BEAT\")\n",
+    "devtools::install_github(\"barcaroli/R2BEAT\",dependencies=FALSE)\n",
     "library(R2BEAT)"
    ]
   },
