--- a/R2BEAT_workflows.Rmd
+++ b/R2BEAT_workflows.Rmd
@@ -1,28 +1,32 @@
 ---
-title: "Workflow examples with R2BEAT "
-output: html_notebook
+title: "R2BEAT_workflows"
+author: "Giulio Barcaroli"
+date: "6/10/2021"
+output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+# Workflow examples with R2BEAT 
 # Scenario 1
 Only a sampling frame containing the units of the population 
 of reference is available, no previous round of the sampling survey to be 
 planned
 
+
 ```{r}
 # Install last version of R2BEAT and ReGenesees
 #install.packages("devtools")
-#devtools::install_github("DiegoZardetto/ReGenesees",dependencies = FALSE)
 #devtools::install_github("barcaroli/R2BEAT",dependencies=FALSE)
 library("R2BEAT")
 ```
 
 ```{r}
-packageVersion("ReGenesees")
-```
-
-```{r}
 packageVersion("R2BEAT")
 ```
+
 
 ```{r}
 ## Sampling frame
@@ -30,4 +34,455 @@ load("pop.RData")
 str(pop)
 ```
 
+## Precision constraints
+
+
+```{r}
+
+cv <- as.data.frame(list(DOM=c("DOM1","DOM2"),
+                         CV1=c(0.02,0.03),
+                         CV2=c(0.03,0.06),
+                         CV3=c(0.03,0.06),
+                         CV4=c(0.05,0.08)))
+cv
+```
+
+## Sensitivity analysis
+
+
+```{r}
+sens_min_SSU <- sensitivity_min_SSU (
+             samp_frame=pop,
+             errors=cv,
+             id_PSU="municipality",
+             id_SSU="id_ind",
+             strata_var="stratum",
+             target_vars=c("income_hh","active","inactive","unemployed"),
+             deff_var="stratum",
+             domain_var="region",
+             delta=1,
+             f=0.05,
+             deff_sugg=1,
+             min=30,
+             max=80,
+             plot=TRUE)
+```
+
+
+## Preparation of inputs for allocation steps
+
+
+```{r}
+## Preparation of inputs for allocation steps
+samp_frame <- pop
+samp_frame$one <- 1
+id_PSU <- "municipality"  
+id_SSU <- "id_ind"        
+strata_var <- "stratum"   
+target_vars <- c("income_hh","active","inactive","unemployed")   
+deff_var <- "stratum"     
+domain_var <- "region"  
+delta =  1       # households = survey units
+minimum <- 50    # minimum number of SSUs to be interviewed in each selected PSU
+f = 0.05         # suggestion for the sampling fraction 
+deff_sugg <- 1.5 # suggestion for the deff value
+ 
+inp <- prepareInputToAllocation1(samp_frame,
+                                id_PSU,
+                                id_SSU,
+                                strata_var,
+                                target_vars,
+                                deff_var,
+                                domain_var,
+                                minimum,
+                                delta,
+                                f,
+                                deff_sugg)
+```
+
+```{r}
+head(inp$deff)
+```
+
+```{r}
+head(inp$effst)
+```
+
+```{r}
+head(inp$rho)
+```
+
+```{r}
+head(inp$psu_file)
+```
+
+```{r}
+head(inp$des_file)
+```
+
+
+## Allocation
+
+
+```{r}
+minPSUstrat <- 1
+inp$desfile$MINIMUM <- 50
+alloc <- beat.2st(stratif = inp$strata, 
+                  errors = cv, 
+                  des_file = inp$des_file, 
+                  psu_file = inp$psu_file, 
+                  rho = inp$rho, 
+                  deft_start = NULL, 
+                  effst = inp$effst,
+                  epsilon1 = 5, 
+                  mmdiff_deft = 1,
+                  maxi = 15, 
+                  epsilon = 10^(-11), 
+                  minPSUstrat,
+                  minnumstrat = 2, 
+                  maxiter = 200, 
+                  maxiter1 = 25)
+```
+
+
+## Selection of PSUs (I stage)
+
+
+```{r}
+set.seed(1234)
+sample_1st <- select_PSU(alloc, type="ALLOC", pps=TRUE)
+```
+
+```{r}
+sample_1st$PSU_stats
+```
+
+
+## Selection of SSUs (II stage)
+
+
+```{r}
+samp <- select_SSU(df=pop,
+                   PSU_code="municipality",
+                   SSU_code="id_ind",
+                   PSU_sampled=sample_1st$sample_PSU,
+                   verbose=TRUE)
+```
+
+
+
+```{r}
+## Plot of weights distribution
+par(mfrow=c(1, 2))
+boxplot(samp$weight,col="grey")
+title("Weights distribution (total sample)",cex.main=0.7)
+boxplot(weight ~ region, data=samp,col="grey")
+title("Weights distribution by region",cex.main=0.7)
+par(mfrow=c(1, 2))
+boxplot(weight ~ province, data=samp,col="grey")
+title("Weights distribution by province",cex.main=0.7)
+boxplot(weight ~ stratum, data=samp,col="grey")
+title("Weights distribution by stratum",cex.main=0.7)
+```
+
+
+## Precision constraints compliance control (by simulation)
+
+
+```{r}
+df=pop
+df$one <- 1
+PSU_code="municipality"
+SSU_code="id_ind"
+target_vars <- c("income_hh",
+                 "active",
+                 "inactive",
+                 "unemployed")  
+```
+
+
+```{r}
+# Domain level = national
+domain_var <- "one"
+set.seed(1234)
+eval <- eval_2stage(df,
+                    PSU_code,
+                    SSU_code,
+                    domain_var,
+                    target_vars,
+                    sample_1st$sample_PSU,
+                    nsampl=100, 
+                    writeFiles=FALSE,
+                    progress=TRUE) 
+eval$coeff_var
+```
+
+```{r}
+# Domain level = regional
+domain_var <- "region"
+set.seed(1234)
+set.seed(1234)
+eval <- eval_2stage(df,
+                    PSU_code,
+                    SSU_code,
+                    domain_var,
+                    target_vars,
+                    sample_1st$sample_PSU,
+                    nsampl=100, 
+                    writeFiles=FALSE,
+                    progress=TRUE) 
+eval$coeff_var
+```
+
+```{r}
+alloc$sensitivity
+```
+
+
+```{r}
+save(samp,file="sample.RData")
+```
+
+# Scenario 2
+One previous round of the sampling survey is available.
+
+## Analysis of sampled data
+
+
+```{r}
+#devtools::install_github("DiegoZardetto/ReGenesees",dependencies = FALSE)
+library(ReGenesees)
+```
+
+```{r}
+load("sample.RData")
+str(samp)
+```
+
+```{r}
+## Sample design description
+samp$stratum_2 <- as.factor(samp$stratum_2)
+sample.des <- e.svydesign(samp, 
+                          ids= ~ municipality + id_hh, 
+                          strata = ~ stratum_2, 
+                          weights = ~ weight,
+                          self.rep.str = ~ SR,
+                          check.data = TRUE)
+```
+
+
+```{r}
+## Find and collapse lonely strata
+ls <- find.lon.strata(sample.des)
+if (!is.null(ls)) sample.des <- collapse.strata(sample.des)
+```
+
+
+```{r}
+## Calibration with known totals
+totals <- pop.template(sample.des,
+             calmodel = ~ sex : cl_age, 
+             partition = ~ region)
+totals <- fill.template(pop, totals, mem.frac = 10)
+sample.cal <- e.calibrate(sample.des, 
+                          totals,
+                          calmodel = ~ sex : cl_age, 
+                          partition = ~ region,
+                          calfun = "logit",
+                          bounds = c(0.3, 2.6), 
+                          aggregate.stage = 2,
+                          force = FALSE)
+```
+
+ 
+## Preparation of inputs for allocation steps
+
+
+```{r}
+samp_frame <- pop
+RGdes <- sample.des
+RGcal <- sample.cal
+strata_vars <- c("stratum")      
+target_vars <- c("income_hh",
+                 "active",
+                 "inactive",
+                 "unemployed")   
+weight_var <- "weight"
+deff_vars <- "stratum"            
+id_PSU <- c("municipality")      
+id_SSU <- c("id_hh")             
+domain_vars <- c("region") 
+delta <- 1                   
+minimum <- 50                
+
+inp <- prepareInputToAllocation2(
+        samp_frame,  # sampling frame
+        RGdes,       # ReGenesees design object
+        RGcal,       # ReGenesees calibrated object
+        id_PSU,      # identification variable of PSUs
+        id_SSU,      # identification variable of SSUs
+        strata_vars, # strata variables
+        target_vars, # target variables
+        deff_vars,   # deff variables
+        domain_vars, # domain variables
+        delta,       # Average number of SSUs for each selection unit
+        minimum      # Minimum number of SSUs to be selected in each PSU
+      )
+```
+
+
+```{r}
+head(inp$strata)
+```
+
+
+```{r}
+head(inp$deff)
+```
+
+
+```{r}
+head(inp$effst)
+```
+
+
+```{r}
+head(inp$rho)
+```
+
+
+```{r}
+head(inp$psu_file)
+```
+
+
+## Allocation
+
+
+```{r}
+set.seed(1234)
+minPSUstrat <- 2
+inp$des_file$MINIMUM <- 50
+alloc <- beat.2st(stratif = inp$strata, 
+                  errors = cv, 
+                  des_file = inp$des_file, 
+                  psu_file = inp$psu_file, 
+                  rho = inp$rho, 
+                  deft_start = NULL, 
+                  effst = inp$effst,
+                  epsilon1 = 5, 
+                  mmdiff_deft = 1,
+                  maxi = 15, 
+                  epsilon = 10^(-11), 
+                  minnumstrat = 2, 
+                  minPSUstrat,
+                  maxiter = 200, 
+                  maxiter1 = 25)
+```
+
+
+
+## Selection of PSUs (I stage)
+
+```{r}
+set.seed(1234)
+sample_1st <- select_PSU(alloc, type="ALLOC", pps=TRUE)
+```
+
+```{r}
+sample_1st$PSU_stats
+```
+
+
+## Selection of SSUs (II stage)
+
+
+```{r}
+set.seed(1234)
+samp <- select_SSU(df=pop,
+                   PSU_code="municipality",
+                   SSU_code="id_ind",
+                   PSU_sampled=sample_1st$sample_PSU,
+                   verbose=TRUE)
+```
+
+```{r}
+nrow(samp)
+sum(alloc$alloc$ALLOC[-nrow(alloc$alloc)])
+```
+
+
+```{r}
+nrow(pop)
+sum(samp$weight)
+```
+
+
+```{r}
+## Plot of weights distribution
+par(mfrow=c(1, 2))
+boxplot(samp$weight,col="grey")
+title("Weights distribution (total sample)",cex.main=0.7)
+boxplot(weight ~ region, data=samp,col="grey")
+title("Weights distribution by region",cex.main=0.7)
+par(mfrow=c(1, 2))
+boxplot(weight ~ province, data=samp,col="grey")
+title("Weights distribution by province",cex.main=0.7)
+boxplot(weight ~ stratum, data=samp,col="grey")
+title("Weights distribution by stratum",cex.main=0.7)
+```
+
+
+## Precision constraints compliance control (by simulation)
+
+
+```{r}
+df=pop
+df$one <- 1
+PSU_code="municipality"
+SSU_code="id_ind"
+target_vars <- c("income_hh",
+                 "active",
+                 "inactive",
+                 "unemployed")  
+```
+
+
+```{r}
+# Domain level = national
+domain_var <- "one"
+set.seed(1234)
+eval <- eval_2stage(df,
+                    PSU_code,
+                    SSU_code,
+                    domain_var,
+                    target_vars,
+                    PSU_sampled=sample_1st$sample_PSU,
+                    nsampl=100, 
+                    writeFiles=FALSE,
+                    progress=TRUE) 
+eval$coeff_var
+```
+
+
+```{r}
+# Domain level = regional
+domain_var <- "region"
+set.seed(1234)
+eval <- eval_2stage(df,
+                    PSU_code,
+                    SSU_code,
+                    domain_var,
+                    target_vars,
+                    PSU_sampled=sample_1st$sample_PSU,
+                    nsampl=100, 
+                    writeFiles=FALSE,
+                    progress=TRUE) 
+eval$coeff_var
+```
+
+
+```{r}
+alloc$sensitivity
+```
 
