--- a/R2BEAT_workflows.Rmd
+++ b/R2BEAT_workflows.Rmd
@@ -61,7 +61,6 @@ sens_min_SSU <- sensitivity_min_SSU (
              deff_var="stratum",
              domain_var="region",
              delta=1,
-             f=0.05,
              deff_sugg=1,
              min=30,
              max=80,
@@ -84,10 +83,9 @@ deff_var <- "stratum"
 domain_var <- "region"  
 delta =  1       # households = survey units
 minimum <- 50    # minimum number of SSUs to be interviewed in each selected PSU
-f = 0.05         # suggestion for the sampling fraction 
 deff_sugg <- 1.5 # suggestion for the deff value
  
-inp <- prepareInputToAllocation1(samp_frame,
+inp1 <- prepareInputToAllocation1(samp_frame,
                                 id_PSU,
                                 id_SSU,
                                 strata_var,
@@ -96,28 +94,27 @@ inp <- prepareInputToAllocation1(samp_frame,
                                 domain_var,
                                 minimum,
                                 delta,
-                                f,
                                 deff_sugg)
 ```
 
 ```{r}
-head(inp$deff)
+head(inp1$deff)
 ```
 
 ```{r}
-head(inp$effst)
+head(inp1$effst)
 ```
 
 ```{r}
-head(inp$rho)
+head(inp1$rho)
 ```
 
 ```{r}
-head(inp$psu_file)
+head(inp1$psu_file)
 ```
 
 ```{r}
-head(inp$des_file)
+head(inp1$des_file)
 ```
 
 
@@ -125,23 +122,17 @@ head(inp$des_file)
 
 
 ```{r}
-minPSUstrat <- 1
-inp$desfile$MINIMUM <- 50
-alloc <- beat.2st(stratif = inp$strata, 
+inp1$desfile$MINIMUM <- 50
+alloc1 <- beat.2st(stratif = inp1$strata, 
                   errors = cv, 
-                  des_file = inp$des_file, 
-                  psu_file = inp$psu_file, 
-                  rho = inp$rho, 
-                  deft_start = NULL, 
-                  effst = inp$effst,
-                  epsilon1 = 5, 
-                  mmdiff_deft = 1,
-                  maxi = 15, 
-                  epsilon = 10^(-11), 
-                  minPSUstrat,
-                  minnumstrat = 2, 
-                  maxiter = 200, 
-                  maxiter1 = 25)
+                  des_file = inp1$des_file, 
+                  psu_file = inp1$psu_file, 
+                  rho = inp1$rho, 
+                  deft_start = NULL,
+                  effst = inp1$effst, 
+                  minPSUstrat = 2,
+                  minnumstrat = 50
+                  )
 ```
 
 
@@ -150,7 +141,7 @@ alloc <- beat.2st(stratif = inp$strata,
 
 ```{r}
 set.seed(1234)
-sample_1st <- select_PSU(alloc, type="ALLOC", pps=TRUE)
+sample_1st <- select_PSU(alloc1, type="ALLOC", pps=TRUE)
 ```
 
 ```{r}
@@ -205,7 +196,7 @@ target_vars <- c("income_hh",
 # Domain level = national
 domain_var <- "one"
 set.seed(1234)
-eval <- eval_2stage(df,
+eval11 <- eval_2stage(df,
                     PSU_code,
                     SSU_code,
                     domain_var,
@@ -214,7 +205,7 @@ eval <- eval_2stage(df,
                     nsampl=100, 
                     writeFiles=FALSE,
                     progress=TRUE) 
-eval$coeff_var
+eval11$coeff_var
 ```
 
 ```{r}
@@ -222,7 +213,7 @@ eval$coeff_var
 domain_var <- "region"
 set.seed(1234)
 set.seed(1234)
-eval <- eval_2stage(df,
+eval12 <- eval_2stage(df,
                     PSU_code,
                     SSU_code,
                     domain_var,
@@ -231,11 +222,11 @@ eval <- eval_2stage(df,
                     nsampl=100, 
                     writeFiles=FALSE,
                     progress=TRUE) 
-eval$coeff_var
+eval12$coeff_var
 ```
 
 ```{r}
-alloc$sensitivity
+alloc1$sensitivity
 ```
 
 
@@ -315,7 +306,7 @@ domain_vars <- c("region")
 delta <- 1                   
 minimum <- 50                
 
-inp <- prepareInputToAllocation2(
+inp2 <- prepareInputToAllocation2(
         samp_frame,  # sampling frame
         RGdes,       # ReGenesees design object
         RGcal,       # ReGenesees calibrated object
@@ -332,27 +323,31 @@ inp <- prepareInputToAllocation2(
 
 
 ```{r}
-head(inp$strata)
+head(inp2$strata)
 ```
 
 
 ```{r}
-head(inp$deff)
+head(inp2$deff)
 ```
 
 
 ```{r}
-head(inp$effst)
+head(inp2$effst)
 ```
 
 
 ```{r}
-head(inp$rho)
+head(inp2$rho)
 ```
 
 
 ```{r}
-head(inp$psu_file)
+head(inp2$psu_file)
+```
+
+```{r}
+head(inp2$des_file)
 ```
 
 
@@ -361,23 +356,16 @@ head(inp$psu_file)
 
 ```{r}
 set.seed(1234)
-minPSUstrat <- 2
-inp$des_file$MINIMUM <- 50
-alloc <- beat.2st(stratif = inp$strata, 
+inp2$des_file$MINIMUM <- 50
+alloc2 <- beat.2st(stratif = inp2$strata, 
                   errors = cv, 
-                  des_file = inp$des_file, 
-                  psu_file = inp$psu_file, 
-                  rho = inp$rho, 
+                  des_file = inp2$des_file, 
+                  psu_file = inp2$psu_file, 
+                  rho = inp2$rho, 
                   deft_start = NULL, 
-                  effst = inp$effst,
-                  epsilon1 = 5, 
-                  mmdiff_deft = 1,
-                  maxi = 15, 
-                  epsilon = 10^(-11), 
+                  effst = inp2$effst,
                   minnumstrat = 2, 
-                  minPSUstrat,
-                  maxiter = 200, 
-                  maxiter1 = 25)
+                  minPSUstrat = 2)
 ```
 
 
@@ -386,7 +374,7 @@ alloc <- beat.2st(stratif = inp$strata,
 
 ```{r}
 set.seed(1234)
-sample_1st <- select_PSU(alloc, type="ALLOC", pps=TRUE)
+sample_1st <- select_PSU(alloc2, type="ALLOC", pps=TRUE)
 ```
 
 ```{r}
@@ -408,7 +396,7 @@ samp <- select_SSU(df=pop,
 
 ```{r}
 nrow(samp)
-sum(alloc$alloc$ALLOC[-nrow(alloc$alloc)])
+sum(alloc2$alloc$ALLOC[-nrow(alloc2$alloc)])
 ```
 
 
@@ -452,7 +440,7 @@ target_vars <- c("income_hh",
 # Domain level = national
 domain_var <- "one"
 set.seed(1234)
-eval <- eval_2stage(df,
+eval21 <- eval_2stage(df,
                     PSU_code,
                     SSU_code,
                     domain_var,
@@ -461,7 +449,7 @@ eval <- eval_2stage(df,
                     nsampl=100, 
                     writeFiles=FALSE,
                     progress=TRUE) 
-eval$coeff_var
+eval21$coeff_var
 ```
 
 
@@ -469,7 +457,7 @@ eval$coeff_var
 # Domain level = regional
 domain_var <- "region"
 set.seed(1234)
-eval <- eval_2stage(df,
+eval22 <- eval_2stage(df,
                     PSU_code,
                     SSU_code,
                     domain_var,
@@ -478,11 +466,11 @@ eval <- eval_2stage(df,
                     nsampl=100, 
                     writeFiles=FALSE,
                     progress=TRUE) 
-eval$coeff_var
+eval22$coeff_var
 ```
 
 
 ```{r}
-alloc$sensitivity
+alloc2$sensitivity
 ```
 
