--- a/R2BEAT_workflows.Rmd
+++ b/R2BEAT_workflows.Rmd
@@ -293,16 +293,16 @@ sample.cal <- e.calibrate(sample.des,
 samp_frame <- pop
 RGdes <- sample.des
 RGcal <- sample.cal
-strata_vars <- c("stratum")      
+strata_var <- c("stratum")      
 target_vars <- c("income_hh",
                  "active",
                  "inactive",
                  "unemployed")   
 weight_var <- "weight"
-deff_vars <- "stratum"            
+deff_var <- "stratum"            
 id_PSU <- c("municipality")      
 id_SSU <- c("id_hh")             
-domain_vars <- c("region") 
+domain_var <- c("region") 
 delta <- 1                   
 minimum <- 50                
 
@@ -312,10 +312,10 @@ inp2 <- prepareInputToAllocation2(
         RGcal,       # ReGenesees calibrated object
         id_PSU,      # identification variable of PSUs
         id_SSU,      # identification variable of SSUs
-        strata_vars, # strata variables
+        strata_var,  # strata variable
         target_vars, # target variables
-        deff_vars,   # deff variables
-        domain_vars, # domain variables
+        deff_var,    # deff variable
+        domain_var,  # domain variable
         delta,       # Average number of SSUs for each selection unit
         minimum      # Minimum number of SSUs to be selected in each PSU
       )
